 - fix: missing .rtdc resource files in filter view
 - fix: error handling when connection to server fails on download (#75)
 - fix: '_condensed' suffix for file stem randomly missing in downloads
 - fix: finalize/ephermalize job when upload finishes when widget not visible
 - fix: race condition in `DownloadJob.get_status`
 - enh: display DCOR instance title in search bar
 - enh: make icons "grayer" so they work in dark themes as well
 - enh: add `SQLiteKeyJSONDatabase` for persistent metadata storage
 - enh: add `MetaCache` for persistent metadata management
 - enh: add `CKANAPI.hostname`
 - enh: sort search results by creation date instead of score and modified date
 - enh: convenience kwarg `since_time` for `search_dataset_via_api`
 - enh: implement `DBExtract.__repr__`
 - enh: remove unused "Sharing" page
 - enh: add icon for "Find Data"
 - enh: cache CKANAPI instance in GUI
 - ref: remove `mode` from `DBInterrogator`
 - ref: replace `user_list` with `user_autocomplete`
 - ref: replace `search_dataset` with `search_dataset_via_api`
   in `APIInterrogator`; `search_dataset` is now only free text search
 - ref: rename gui submodules for better overview
 - ref: move "My Data" panel into its own submodule
 - ref: implement `is_dc_resource_dict`
0.17.4
 - fix: correctly handle dataset IDs and names in `DBExtract`
 - fix: `get_datasets_user_shared` failed when many circles/collections exist
 - enh: improve "anonymous" GUI experience (no busy cursor, disable tabs)
 - enh: allow to disable update check on startup via settings
 - enh: apply button in upload settings only affects cache location
 - enh: move "apply" button in downloads settings next to "browse" button
 - ref: remove unnecessary custom signals for preferences dialog
 - ref: reorder and rename internal settings dialog methods
 - ref: decorate PyQtSlots
 - tests: restore previous users settings after testing
0.17.3
 - fix: drag'n'drop to DCscope broken since 0.17.0 (#88)